# ASBX-LDA-Stego

./: .gitignore  LICENSE  README.md  pyproject.toml
SPE/: README.md  run_reproducibility.ps1
SPE/code/: block_size_sweep.py  capacity_benchmark.py  lda_trainer.py  native_benchmark.py  payload_decoder.py  payload_encoder.py  practical_benchmark.py  produce_figures.py  requirements.txt  software_benchmark.py  stego_generator.py  test_integration.py
SPE/results/: block_size_sweep.csv  block_size_sweep_summary.csv  capacity_results.csv  capacity_results.json  native_benchmark.csv  native_benchmark_summary.csv  practical_benchmark.csv  practical_benchmark_summary.csv  software_benchmark.csv  software_benchmark_summary.csv
experiments/: README.md  run_reproducibility.ps1
experiments/config/: reference.json
experiments/data/: README.md
experiments/manifests/: README.md  confirmation_domains.csv  generated_large.csv  real_corpora.csv  sparse_domains.csv  synthetic.csv
experiments/native/: README.md
experiments/reports/: 01_research_hypotheses.md  02_experimental_format.md  03_initial_protocol.md  04_initial_selector_results.md  05_real_corpus_verdict.md  06_sparse_domain_protocol.md  07_sparse_domain_verdict.md  08_ml_selector_verdict.md  09_downstream_transform_verdict.md
experiments/results/: confirmation_domains.csv  downstream_transform_measurements.csv  downstream_transform_summary.csv  ml_feature_timing.csv  ml_selector_confusion.csv  ml_selector_files.csv  ml_selector_models.csv  ml_selector_summary.csv  native_large_benchmark.csv  real_corpus_summary.csv  (+8 more)
(+43 files in other folders)
